Add photos page draggable-photo

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -64658,3 +64658,16 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   text-align: center !important;
   text-decoration: underline !important;
 }
+
+._1258d0t {
+  width: 100% !important;
+  height: 100% !important;
+  position: relative !important;
+}
+
+@media (min-width: 744px) {
+  ._vvli20:hover {
+    border: 2px solid rgb(34, 34, 34) !important;
+    color: rgb(34, 34, 34) !important;
+  }
+}
