modal-dialog__content-wrapper

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -64224,7 +64224,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   justify-content: space-between !important;
   align-items: center !important;
 }
-._1ucy1zjv {
+.modal-dialog__content-wrapper {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   background: rgb(255, 255, 255) !important;
@@ -64243,7 +64243,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   animation-name: keyframe_d37zz3 !important;
 }
 @media (min-width: 744px) {
-  ._1ucy1zjv {
+  .modal-dialog__content-wrapper {
     width: 100% !important;
     max-width: 568px !important;
     border-radius: 12px !important;
