--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -61564,13 +61564,13 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background-repeat: no-repeat !important;
 }
 
-._9ofhsl {
+.img-full {
   height: 0px !important;
   width: 0px !important;
   position: absolute !important;
 }
 @supports (object-fit: cover) {
-  ._9ofhsl {
+  .img-full {
     height: 100% !important;
     width: 100% !important;
     position: static !important;
@@ -64148,13 +64148,13 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
 }
-._9ofhsl {
+.img-full {
   height: 0px !important;
   width: 0px !important;
   position: absolute !important;
 }
 @supports (object-fit: cover) {
-  ._9ofhsl {
+  .img-full {
     height: 100% !important;
     width: 100% !important;
     position: static !important;
