--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -61559,7 +61559,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-._1h6n1zu {
+.img-middle {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
 }
@@ -63020,7 +63020,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   vertical-align: middle !important;
 }
 
-._1h6n1zu {
+.img-middle {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
 }
@@ -64144,7 +64144,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .dir.ijzb76q[class][class] {
   transform: scale(1.1);
 }
-._1h6n1zu {
+.img-middle {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
 }
