--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -64120,7 +64120,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   transition-duration: 250ms;
   transition-timing-function: ease-out;
 }
-._yeil77 {
+.image-video {
   height: 100% !important;
   width: 100% !important;
   display: block !important;
