--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -45267,7 +45267,7 @@ video::cue {
   position: relative !important;
   z-index: 20 !important;
 }
-._ni9axhe {
+.cell-middle {
   display: table-cell;
   vertical-align: middle !important;
 }
@@ -62673,7 +62673,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: 180% !important;
 }
 
-._ni9axhe {
+.cell-middle {
   display: table-cell !important;
   vertical-align: middle !important;
 }
@@ -63755,7 +63755,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   height: 100% !important;
 }
 
-._ni9axhe {
+.cell-middle {
   display: table-cell !important;
   vertical-align: middle !important;
 }
@@ -63913,7 +63913,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   vertical-align: middle !important;
 }
 
-._ni9axhe {
+.cell-middle {
   display: table-cell !important;
   vertical-align: middle !important;
 }
