--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -57101,7 +57101,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   padding-left: 24px;
   padding-right: 24px;
 }
-._jro6t0 {
+.flex {
   display: flex !important;
 }
 ._1a955cc {
@@ -61030,7 +61030,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   white-space: nowrap !important;
 }
 
-._jro6t0 {
+.flex {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -62267,7 +62267,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-._jro6t0 {
+.flex {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -63579,7 +63579,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: 100% !important;
 }
 
-._jro6t0 {
+.flex {
   display: flex !important;
 }
 
@@ -63882,7 +63882,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: rgb(0, 132, 137) !important;
 }
 
-._jro6t0 {
+.flex {
   display: flex !important;
 }
 
