--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63827,7 +63827,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: rgb(72, 72, 72) !important;
 }
 
-._4efw5a {
+.uppercase {
   text-transform: uppercase !important;
 }
 
