--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63583,7 +63583,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: flex !important;
 }
 
-._t0tx82 {
+.flex-grow-1 {
   -webkit-box-flex: 1 !important;
   flex-grow: 1 !important;
 }
