--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7726,7 +7726,7 @@ html :where(img[class*='wp-image-']) {
   flex: 1 0 0%;
   min-width: 0;
 }
-.header__search-overlay[class][class] {
+.visually-hidden[class][class] {
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
   height: 1px;
@@ -9538,7 +9538,7 @@ html :where(img[class*='wp-image-']) {
   visibility: visible;
   opacity: 1;
 }
-.header__search-overlay[class][class] {
+.visually-hidden[class][class] {
   -webkit-clip: rect(0 0 0 0);
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(100%);
@@ -9550,7 +9550,7 @@ html :where(img[class*='wp-image-']) {
   white-space: nowrap;
   width: 1px;
 }
-.dir.header__search-overlay[class][class] {
+.dir.visually-hidden[class][class] {
   border: 0;
   padding: 0;
 }
