pagination-bullets__container

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63076,11 +63076,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @supports (overflow: clip) {
-  ._szn05y {
+  .pagination-bullets__container {
     overflow: clip !important;
   }
 }
-._szn05y {
+.pagination-bullets__container {
   display: flex !important;
   overflow: hidden !important;
   padding-bottom: 12px !important;
