--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63066,7 +63066,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   min-height: var(--f-fw-z-a-i);
   white-space: nowrap;
 }
-._r752or {
+.pagination-bullets {
   -webkit-box-pack: center !important;
   -webkit-box-align: end !important;
   align-items: flex-end !important;
