--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63040,14 +63040,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background-repeat: no-repeat !important;
 }
 
-._6tbg2q {
+.img-full {
   height: 0px !important;
   width: 0px !important;
   position: absolute !important;
 }
 
 @supports (object-fit: cover) {
-  ._6tbg2q {
+  .img-full {
     height: 100% !important;
     width: 100% !important;
   }
