--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4347,6 +4347,14 @@ html :where(img[class*='wp-image-']) {
 .img-full {
   height: 0 !important;
   width: 0 !important;
+  position: absolute !important;
+}
+@supports (object-fit: cover) {
+  .img-full {
+    height: 100% !important;
+    width: 100% !important;
+    position: static !important;
+  }
 }
 .table-container {
   display: table !important;
