rename btn-outline-muted, remove _3hmsj from html

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -52944,7 +52944,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: #717171 !important;
   font-weight: 100 !important;
 }
-._1ynkfbb {
+.btn-outline-muted {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
   appearance: none !important;
@@ -52960,7 +52960,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
 }
-._1ynkfbb:disabled {
+.btn-outline-muted:disabled {
   opacity: 1 !important;
   cursor: not-allowed !important;
   color: #222 !important;
